# rknn_yolov8_bytetrack

./: CMakeLists.txt  README.md  build-linux_RK3588.sh
include/: Detect.h
src/: Detect.cc  DetectImpl.cc  DetectImpl.h  compile.sh  coreNum.cc  main_MultiDetect.cpp  postprocess.cc  postprocess.h  resize_function.cc  resize_function.h  timer.h
